--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,30 +1,50 @@
-
 name: Build Titan (Debug APK)
 
 on:
   workflow_dispatch:
   push:
     paths:
-      - "TitanApp_Rebuild.zip"
-      - ".github/workflows/android-build.yml"
+      - 'TitanApp_Rebuild.zip'
+      - '.github/workflows/android-build.yml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with: { distribution: temurin, java-version: "17", cache: gradle }
-      - uses: android-actions/setup-android@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      # 1) Unzip first so Gradle files exist on disk
       - name: Unzip project
         run: unzip -q TitanApp_Rebuild.zip -d TitanApp
+
+      # 2) Now Java can find Gradle files for caching
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+          # Tell it where the gradle files live
+          cache-dependency-path: |
+            TitanApp/**/build.gradle
+            TitanApp/**/build.gradle.kts
+            TitanApp/**/settings.gradle
+            TitanApp/**/settings.gradle.kts
+            TitanApp/**/gradle-wrapper.properties
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Install SDK components
         run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
+
       - name: Build Debug APK
         working-directory: TitanApp
         run: |
           chmod +x ./gradlew
           ./gradlew --no-daemon assembleDebug
+
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
