--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -14,24 +14,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 1) Unzip first so Gradle files exist on disk
       - name: Unzip project
         run: unzip -q TitanApp_Rebuild.zip -d TitanApp
 
-      # 2) Now Java can find Gradle files for caching
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-          cache: 'gradle'
-          # Tell it where the gradle files live
-          cache-dependency-path: |
-            TitanApp/**/build.gradle
-            TitanApp/**/build.gradle.kts
-            TitanApp/**/settings.gradle
-            TitanApp/**/settings.gradle.kts
-            TitanApp/**/gradle-wrapper.properties
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
@@ -39,11 +29,17 @@ jobs:
       - name: Install SDK components
         run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Build Debug APK
-        working-directory: TitanApp
+      # NEW: Download and use Gradle directly (no wrapper in repo)
+      - name: Download Gradle 8.7
         run: |
-          chmod +x ./gradlew
-          ./gradlew --no-daemon assembleDebug
+          curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
+          unzip -q gradle.zip -d $HOME/gradle
+          echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
+
+      - name: Build Debug APK
+        run: |
+          gradle -v
+          gradle -p TitanApp assembleDebug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
