--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,29 +1,49 @@
-android {
-  namespace 'com.example.titan'
-  compileSdk 34
+name: Build Titan (Debug APK)
 
-  defaultConfig {
-    applicationId "com.example.titan"
-    minSdk 26
-    targetSdk 34
-    versionCode 1
-    versionName "1.0"
-  }
+on:
+  workflow_dispatch:
+  push:
+    paths:
+      - 'TitanApp_Rebuild.zip'
+      - '.github/workflows/android-build.yml'
 
-  buildFeatures { compose true }
-  composeOptions { kotlinCompilerExtensionVersion '1.5.14' }
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-  // ✅ Add this:
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-    targetCompatibility JavaVersion.VERSION_17
-  }
-}
+      - name: Unzip project
+        run: unzip -q TitanApp_Rebuild.zip -d TitanApp
 
-kotlin {
-  // ✅ Add this toolchain block (top-level in the file, not inside android{})
-  jvmToolchain(17)
-}
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-// Keep this too:
-kotlinOptions { jvmTarget = '17' }
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install SDK components
+        run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
+
+      # NEW: Download and use Gradle directly (no wrapper in repo)
+      - name: Download Gradle 8.7
+        run: |
+          curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
+          unzip -q gradle.zip -d $HOME/gradle
+          echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
+
+      - name: Build Debug APK
+        run: |
+          gradle -v
+          gradle -p TitanApp assembleDebug
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: titan-debug-apk
+          path: TitanApp/app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 14
