--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -36,24 +36,49 @@ jobs:
           echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
 
       # 👉 Inject Java 17 + Kotlin toolchain into the unzipped project
-      - name: Patch Gradle for Java 17
-        run: |
+    
+          - name: Patch Gradle for Java 17 (safe ASCII)
+        run: 
           FILE="TitanApp/app/build.gradle"
           if [ -f "$FILE" ]; then
-            # add compileOptions if missing
+            # Strip any non-ASCII chars that may have slipped in
+            LC_ALL=C tr -cd '\11\12\15\40-\176' < "$FILE" > "$FILE.clean" && mv "$FILE.clean" "$FILE"
+
+            # Ensure compileOptions inside android { }
             if ! grep -q "compileOptions" "$FILE"; then
-              awk '1; /composeOptions/ && !x {print "  compileOptions {\\n    sourceCompatibility JavaVersion.VERSION_17\\n    targetCompatibility JavaVersion.VERSION_17\\n  }"; x=1}' "$FILE" > tmp && mv tmp "$FILE"
+              awk '
+                BEGIN{added=0}
+                /composeOptions/ && added==0 {
+                  print; 
+                  print "    compileOptions {";
+                  print "        sourceCompatibility JavaVersion.VERSION_17";
+                  print "        targetCompatibility JavaVersion.VERSION_17";
+                  print "    }";
+                  added=1; next
+                }
+                {print}
+              ' "$FILE" > tmp && mv tmp "$FILE"
+            else
+              # Normalize any smart quotes or weird chars on those lines
+              sed -i "s/JavaVersion[^0-9]*VERSION_17/JavaVersion.VERSION_17/g" "$FILE"
             fi
-            # add kotlin toolchain if missing
+
+            # Add Kotlin toolchain at top-level if missing
             if ! grep -q "jvmToolchain(17)" "$FILE"; then
-              printf "\n// Injected by CI\nkotlin {\n  jvmToolchain(17)\n}\n" >> "$FILE"
+              printf '\n// Injected by CI\nkotlin {\n  jvmToolchain(17)\n}\n' >> "$FILE"
             fi
           fi
-          # tidy manifest package attribute (optional)
+
+          # Clean manifest package attribute (optional)
           MAN="TitanApp/app/src/main/AndroidManifest.xml"
           if [ -f "$MAN" ]; then
             sed -i 's/^\s*<manifest\s\+xmlns:android="http:\/\/schemas.android.com\/apk\/res\/android"\s\+package="[^"]*">/<manifest xmlns:android="http:\/\/schemas.android.com\/apk\/res\/android">/' "$MAN" || true
           fi
+
+      - name: Build Debug APK
+        run: |
+          gradle -v
+          gradle -p TitanApp --no-daemon assembleDebug
 
       - name: Build Debug APK
         run: |
