--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
 
       - name: Setup Android SDK
@@ -29,86 +29,42 @@ jobs:
       - name: Install SDK components
         run: sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Download Gradle 8.7
+      - name: Detect Android project dir
         run: |
-          curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
-          unzip -q gradle.zip -d $HOME/gradle
-          echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
-
-    - name: Patch Gradle for Java 17 + Compose opt-ins (inside android.kotlinOptions)
-        run: |
-          FILE="TitanApp/app/build.gradle"
-          if [ -f "$FILE" ]; then
-            # sanitize to ASCII
-            LC_ALL=C tr -cd '\11\12\15\40-\176' < "$FILE" > "$FILE.clean" && mv "$FILE.clean" "$FILE"
-
-            # Ensure compileOptions { … } INSIDE android { }
-            if ! grep -q "compileOptions" "$FILE"; then
-              awk '
-                BEGIN{added=0}
-                /android *\{/ { inAndroid=1 }
-                /composeOptions/ && inAndroid && added==0 {
-                  print;
-                  print "    compileOptions {";
-                  print "        sourceCompatibility JavaVersion.VERSION_17";
-                  print "        targetCompatibility JavaVersion.VERSION_17";
-                  print "    }";
-                  added=1; next
-                }
-                { print }
-              ' "$FILE" > tmp && mv tmp "$FILE"
-            else
-              sed -i "s/JavaVersion[^0-9]*VERSION_17/JavaVersion.VERSION_17/g" "$FILE"
-            fi
-
-            # Ensure kotlinOptions { … } INSIDE android { }
-            if ! grep -q "kotlinOptions *{" "$FILE"; then
-              awk '
-                BEGIN{added=0}
-                /android *\{/ { inAndroid=1 }
-                /composeOptions/ && inAndroid && added==0 {
-                  print;
-                  print "    kotlinOptions {";
-                  print "        jvmTarget = \"17\"";
-                  print "        freeCompilerArgs += [\"-opt-in=androidx.compose.material3.ExperimentalMaterial3Api\"]";
-                  print "    }";
-                  added=1; next
-                }
-                { print }
-              ' "$FILE" > tmp && mv tmp "$FILE"
-            else
-              # normalize jvmTarget and add opt-in inside existing kotlinOptions
-              sed -i "s/jvmTarget *= *['\"][0-9]*['\"]/jvmTarget = \"17\"/g" "$FILE"
-              awk '
-                BEGIN{inKO=0; injected=0}
-                /kotlinOptions *\{/ {inKO=1}
-                inKO && /}/ && injected==0 { print "        freeCompilerArgs += [\"-opt-in=androidx.compose.material3.ExperimentalMaterial3Api\"]"; injected=1 }
-                { print }
-                /kotlinOptions *\{/ && injected==0 && /}/ { injected=1 }
-                /}/ && inKO { inKO=0 }
-              ' "$FILE" > tmp && mv tmp "$FILE"
-            fi
-
-            # Add Kotlin toolchain at top level if missing
-            if ! grep -q "jvmToolchain(17)" "$FILE"; then
-              printf '\n// Injected by CI\nkotlin {\n  jvmToolchain(17)\n}\n' >> "$FILE"
-            fi
+          set -e
+          D=$(dirname $(find TitanApp -maxdepth 3 -name "settings.gradle*" -print -quit || true))
+          if [ -z "$D" ] || [ "$D" = "." ]; then
+            D=$(find TitanApp -maxdepth 4 -path "*/app" -type d -print -quit | sed 's#/app$##')
           fi
+          echo "PROJECT_DIR=$D" | tee -a $GITHUB_ENV
+          echo "Detected PROJECT_DIR=$D"
+          test -n "$D"
 
-          # Clean manifest package attr (optional)
-          MAN="TitanApp/app/src/main/AndroidManifest.xml"
-          if [ -f "$MAN" ]; then
-            sed -i 's/^\s*<manifest\s\+xmlns:android="http:\/\/schemas.android.com\/apk\/res\/android"\s\+package="[^"]*">/<manifest xmlns:android="http:\/\/schemas.android.com\/apk\/res\/android">/' "$MAN" || true
+      - name: Use Gradle wrapper if available, else download Gradle 8.7
+        run: |
+          if [ -f "$PROJECT_DIR/gradlew" ]; then
+            echo "WRAPPER=1" >> $GITHUB_ENV
+            chmod +x "$PROJECT_DIR/gradlew"
+          else
+            echo "WRAPPER=0" >> $GITHUB_ENV
+            curl -L -o gradle.zip https://services.gradle.org/distributions/gradle-8.7-bin.zip
+            unzip -q gradle.zip -d $HOME/gradle
+            echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
           fi
 
       - name: Build Debug APK
         run: |
-          gradle -v
-          gradle -p TitanApp --no-daemon assembleDebug
+          set -e
+          if [ "$WRAPPER" = "1" ]; then
+            "$PROJECT_DIR/gradlew" -p "$PROJECT_DIR" --no-daemon assembleDebug
+          else
+            gradle -v
+            gradle -p "$PROJECT_DIR" --no-daemon assembleDebug
+          fi
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: titan-debug-apk
-          path: TitanApp/app/build/outputs/apk/debug/app-debug.apk
+          path: ${{ env.PROJECT_DIR }}/app/build/outputs/apk/debug/app-debug.apk
           retention-days: 14
