--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -51,21 +51,24 @@ jobs:
             unzip -q gradle.zip -d $HOME/gradle
             echo "$HOME/gradle/gradle-8.7/bin" >> $GITHUB_PATH
           fi
-      - name: Force Java/Kotlin 17 in Gradle files
+      - name: Force Java/Kotlin 17 in Gradle files (simple)
+        shell: bash
         run: |
+          set -euo pipefail
           APP="$PROJECT_DIR/app"
-          # Work on Groovy or Kotlin scripts
+
           for F in "$APP/build.gradle" "$APP/build.gradle.kts"; do
-            [ -f "$F" ] || continue
-            # Normalize file to ASCII
-            LC_ALL=C tr -cd '\11\12\15\40-\176' < "$F" > "$F.clean" && mv "$F.clean" "$F"
+            if [[ -f "$F" ]]; then
+              # normalize to ASCII (removes weird mobile characters)
+              LC_ALL=C tr -cd '\11\12\15\40-\176' < "$F" > "$F.clean" && mv "$F.clean" "$F"
 
-            # 1) Replace any existing 1.8 settings -> 17
-            sed -i 's/JavaVersion\.VERSION_1_8/JavaVersion.VERSION_17/g' "$F"
-            sed -i 's/sourceCompatibility *= *["'\'']\?1\.8["'\'']\?/sourceCompatibility JavaVersion.VERSION_17/g' "$F"
-            sed -i 's/targetCompatibility *= *["'\'']\?1\.8["'\'']\?/targetCompatibility JavaVersion.VERSION_17/g' "$F"
-            sed -i 's/jvmTarget *= *["'\'']\?1\.8["'\'']\?/jvmTarget = "17"/g' "$F"
-
+              # Replace any 1.8 -> 17 settings
+              sed -i 's/JavaVersion\.VERSION_1_8/JavaVersion.VERSION_17/g' "$F"
+              sed -i 's/sourceCompatibility *=[^0-9A-Za-z]*1\.8/sourceCompatibility JavaVersion.VERSION_17/g' "$F"
+              sed -i 's/targetCompatibility *=[^0-9A-Za-z]*1\.8/targetCompatibility JavaVersion.VERSION_17/g' "$F"
+              sed -i 's/jvmTarget *= *["'\''"]\?1\.8["'\''"]\?/jvmTarget = "17"/g' "$F"
+            fi
+          done
             # 2) Ensure compileOptions exists inside android { }
             if ! grep -q "compileOptions" "$F"; then
               awk '
